--- a/src/window.ui
+++ b/src/window.ui
@@ -3,8 +3,8 @@
   <requires lib="gtk" version="4.0"/>
   <requires lib="Adw" version="1.0"/>
   <template class="MineSweeperWindow" parent="AdwApplicationWindow">
-    <property name="default-width">600</property>
-    <property name="default-height">300</property>
+    <!-- <property name="default-width">600</property> -->
+    <!-- <property name="default-height">300</property> -->
     <child>
       <object class="GtkBox">
         <property name="orientation">vertical</property>
@@ -21,6 +21,9 @@
         <child>
           <object class="MineSweeperMainContent">
             <property name="vexpand">true</property>
+            <property name="hexpand">true</property>
+            <property name="valign">center</property>
+            <property name="halign">center</property>
           </object>
         </child>
       </object>
