Added core status bar functionality.
Squashed commit of the following:

commit 67989f14bb8b6eb74a4572b4024ae5f06da4f946
Author: Ahmad Rahima <ahmadrahimaim@gmail.com>
Date:   Fri Sep 1 18:42:38 2023 +0300

    Added status-bar.

--- a/src/main-content.ui
+++ b/src/main-content.ui
@@ -8,10 +8,11 @@
       </object>
     </property>
     <child>
-      <object class="GtkLabel">
-        <property name="label">"""The Status Bar"""</property>
+      <!-- <object class="GtkLabel"> -->
+      <!--   <property name="label">"""The Status Bar"""</property> -->
+      <!-- </object> -->
+      <object class="MineSweeperStatusBar">
       </object>
-      <!-- <object class="MineSweeperStatusBar" /> -->
     </child>
     <child>
       <!-- <object class="GtkLabel"> -->
