--- a/src/listitem-cell.ui
+++ b/src/listitem-cell.ui
@@ -15,6 +15,9 @@
 
         <property name="child">
           <object class="GtkLabel">
+            <property name="width-chars">4</property>
+            <property name="height-request">80</property>
+
             <binding name="label">
               <lookup name="type_char" type="MineSweeperCell">
                 <lookup name="item">GtkListItem</lookup>
