--- a/src/main-content.ui
+++ b/src/main-content.ui
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
   <template class="MineSweeperMainContent" parent="GtkWidget">
+    <property name="hexpand">true</property>
+    <property name="vexpand">true</property>
+    <!-- <property name="width-request">500</property> -->
+
     <property name="layout-manager">
       <object class="GtkBoxLayout">
         <property name="spacing">8</property>
         <property name="orientation">vertical</property>
       </object>
     </property>
+
     <child>
       <!-- <object class="GtkLabel"> -->
       <!--   <property name="label">"""The Status Bar"""</property> -->
@@ -14,37 +19,44 @@
       <object class="MineSweeperStatusBar">
       </object>
     </child>
+
     <child>
-      <!-- <object class="GtkLabel"> -->
-      <!--   <property name="label">Just a Label</property> -->
-      <!-- </object> -->
-      <object class="GtkGridView">
-        <property name="min-columns">4</property>
-        <property name="max-columns">4</property>
-        <!-- <property name="vexpand">true</property> -->
-        <!-- <property name="hexpand">true</property> -->
-        <property name="width-request">500</property>
+      <object class="GtkScrolledWindow">
+        <property name="vexpand">true</property>
+        <property name="hexpand">true</property>
+        <property name="hscrollbar-policy">automatic</property>
+        <property name="vscrollbar-policy">automatic</property>
+        <property name="propagate-natural-height">true</property>
+        <property name="propagate-natural-width">true</property>
 
-        <style>
-          <class name="grid" />
-        </style>
 
-        <signal name="activate" handler="on_grid_activate" />
+        <property name="child">
+          <object class="GtkGridView" id="grid_view">
+            <property name="min-columns" bind-source="MineSweeperMainContent" bind-property="cells_column" />
+            <property name="max-columns" bind-source="MineSweeperMainContent" bind-property="cells_column" />
 
-        <property name="model">
-          <object class="GtkSingleSelection">
-            <property name="model" bind-source="MineSweeperMainContent" bind-property="cells" />
+            <style>
+              <class name="grid" />
+            </style>
 
-            <signal name="selection-changed" handler="on_grid_selection" />
+            <signal name="activate" handler="on_grid_activate" />
+
+            <property name="model">
+              <object class="GtkSingleSelection">
+                <property name="model" bind-source="MineSweeperMainContent" bind-property="cells" />
+
+                <signal name="selection-changed" handler="on_grid_selection" />
+              </object>
+            </property>
+
+            <property name="factory">
+              <object class="GtkBuilderListItemFactory">
+                <property name="resource">/com/github/adr/MineSweeper/listitem-cell.ui</property>
+              </object>
+            </property>
+
           </object>
         </property>
-
-        <property name="factory">
-          <object class="GtkBuilderListItemFactory">
-            <property name="resource">/com/github/adr/MineSweeper/listitem-cell.ui</property>
-          </object>
-        </property>
-
       </object>
     </child>
   </template>
