Implemented mine-trigger signal and callbacks.
Squashed commit of the following:

commit 5340a2de131f829d8473bf900f2703b94eb62199
Author: Ahmad Rahima <ahmadrahimaim@gmail.com>
Date:   Tue Sep 5 21:39:03 2023 +0300

    Implemented mine-trigger signal and callbacks.

--- a/src/main-content.ui
+++ b/src/main-content.ui
@@ -16,7 +16,7 @@
       <!-- <object class="GtkLabel"> -->
       <!--   <property name="label">"""The Status Bar"""</property> -->
       <!-- </object> -->
-      <object class="MineSweeperStatusBar">
+      <object class="MineSweeperStatusBar" id="status_bar">
       </object>
     </child>
 
