Fixed face icon in the status bar.

--- a/src/status-bar.ui
+++ b/src/status-bar.ui
@@ -18,7 +18,7 @@
 
         <child>
           <object class="GtkLabel">
-            <property name="label">😼</property>
+            <property name="label" bind-source="MineSweeperStatusBar" bind-property="face" />
             <property name="halign">center</property>
           </object>
         </child>
