--- a/src/style.css
+++ b/src/style.css
@@ -14,6 +14,10 @@
     opacity: 0.7;
 }
 
+.status-bar.won {
+    background-color: @success_color;
+}
+
 .status-bar {
     padding: 1em;
     font-size: 2em;
